# learn-anything

./: .editorconfig  .eslintrc.json  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .ignore  .kodiak.toml  .prettierignore  .prettierrc.js  .rustfmt.toml  .taplo.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  Taskfile.yml  app.config.ts  app.global.css  biome.json  bun.lockb  bunfig.toml  cmd.ts  codegen.ts  contributing.md  db.json  deploy-details  eslint.config.js  example_model.py  flake.nix  go.mod  go.sum  index.ts  lax  license  magefile.go  now.json  package-lock.json  package.json  pnpm-lock.yaml  (+11 more)
app/: .electron-builder.config.js  .gitignore  .prettierrc  Cargo.toml  client.tsx  index.html  jazz-schema.ts  main.py  next.config.js  package.json  readme.md  routeTree.gen.ts  router.tsx  ssr.tsx  tailwind.config.cjs  tailwind.config.ts  tauri.conf.json  tsconfig.json  vite.config.ts  vitest.config.js
app/.next/: build-manifest.json  react-loadable-manifest.json
app/.next/cache/autodll-webpack-plugin/: package.json.hash
app/.next/server/: init-server.js  on-error-server.js  pages-manifest.json
app/.next/static/chunks/: 0.js
app/.next/static/development/pages/: _error.js
app/.next/static/runtime/: amp.js  main.js  polyfills.js  react-refresh.js  webpack.js
app/capabilities/: default.json  migrated.json
app/components/: AuthButton.tsx  DailyCalendar.tsx  DailyNote.tsx  DefaultCatchBoundary.tsx  Filters.tsx  GlobalStyles.tsx  MainLayout.tsx  NotFound.tsx  ResizablePanel.tsx  SettingsModal.tsx  Sidebar.tsx  Tiptap.tsx  Tree.tsx  TreeItem.tsx  User.tsx  theme.tsx
app/components/Providers/: SEO.tsx  index.tsx
app/components/Settings/: SettingsModal.tsx  SettingsModalContent.tsx  SettingsModalSidebar.tsx
app/data/: testData.ts
app/lib/: lib.ts
app/models/: example_model.py
app/pages/: _app.tsx  index.tsx
app/public/static/: noflash.ts
app/routers/: example_router.py
app/routes/: __root.tsx  _app.tsx  all-notes.tsx  daily.$date.tsx  daily.tsx  index.tsx  tasks.tsx
app/routes/_app/: index.tsx
app/routes/_app/test/: crud.tsx  index.tsx
app/schemas/: example_schema.py
app/scripts/: test.ts  update-electron-vendors.mjs  watch.mjs
app/src/: App.tsx  browser.rs  file-tree.tsx  index.tsx  lib.rs  main.rs  root.css  root.tsx  styles.css  theme.tsx
app/src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
app/src-tauri/crates/wiki/: Cargo.toml  readme.md
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src/GlobalContext/: edit-guide.ts  global.ts  topic.ts  user.ts  wiki.ts
app/src/components/: AddLinkModal.tsx  Button.tsx  Checkbox.tsx  CommandPalette.tsx  Container.tsx  DevToolsPanel.tsx  Editor.tsx  FancyButton.tsx  Icon.tsx  ImageSidebar.tsx  InputModal.tsx  Layout.tsx  Modal.tsx  NoTopicChosen.tsx  SearchModal.tsx  Settings.tsx  Sidebar.tsx  SignInPage.tsx  SponsorButton.tsx  TiptapEditor.tsx  Titlebar.tsx  Tooltip.tsx  TopicSearch.tsx  footer.tsx  header.tsx  icon.tsx  link.tsx
app/src/components/Codemirror/: CodemirrorEditor.tsx  createCodeMirror.ts  createCompartmentExtension.ts
app/src/components/Monaco/: Monaco.tsx
app/src/components/TipTap/: TiptapEditor.tsx  defaultKeymap.ts  types.ts  vimirror.ts
app/src/components/icons/: bookmark.tsx  heart.tsx  index.tsx  link.tsx  plus.tsx  search.tsx  user.tsx
app/src/components/solid-monaco/: Loader.tsx  MonacoContainer.tsx  MonacoEditor.tsx  index.ts  utils.ts
app/src/lib/: auth.js  auth.ts  firebase.ts  key.js  theme.ts
app/src/pages/: _app.tsx  _document.tsx  _error.tsx  index.tsx  new.tsx
app/src/routes/: index.tsx
app/src/util/: keybinds.ts
app/styles/: app.css
app/styles/baseui/: index.module.css  theme.css
app/test/: wiki.test.ts
app/tests/: e2e.spec.ts  wiki.test.ts
app/types/: env.d.ts  wiki.ts
app/version/: getVersion.mjs  inject-app-version-plugin.mjs
(+1441 files in other folders)
