[package]
authors.workspace = true
edition.workspace = true
license-file.workspace = true
name = "learn-anything"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "app_lib"

[build-dependencies]
tauri-build = { version = "2.0.0-rc.6", features = [] }

[dependencies]
osakit = { version = "0.2.3", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0-rc.6", features = [] }
tauri-plugin-fs = { version = "2.0.0-rc.1", features = ["watch"] }
thiserror = "1.0.63"
