[package]
name = "learn-anything"
version = "0.0.0"
description = "Learn Anything"
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-show", "window-unmaximize", "window-minimize", "window-hide", "window-close", "window-start-dragging", "window-unminimize", "window-maximize", "dialog-all", "fs-remove-file", "fs-remove-dir", "fs-rename-file", "fs-exists", "fs-create-dir", "fs-read-dir", "fs-write-file", "fs-read-file", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
log_macro = "0.1.6"
tauri-plugin-deep-link = "0.1.2"
url = "2.5.0"
serde_urlencoded = "0.7.1"
tauri-plugin-fs-watch = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"
features = ["sqlite"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
